--- a/index.html
+++ b/index.html
@@ -4,29 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minha Check List</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <div class="toggle-btn" onclick="toggleMode()"></div>
+            <!-- Botão para alternar o modo de tema -->
+            <div class="toggle-btn">
+                <button onclick="toggleTheme()">
+                    <img src=img/darkmode.png alt="Toggle theme" class="theme-icon">
+                </button>
+            </div>
             <h1>Minha Check List</h1>
-            <div class="icon">📋</div>
+            <div class="icon"></div>
+            <button class="save-btn" onclick="saveTasks()">Salvar Tarefas</button>
         </div>
         <div class="checklist">
-            <!-- 10 items para a checklist -->
+            <!-- Itens da checklist -->
             <div class="item"><input type="checkbox"><input type="text" placeholder="Escreva sua tarefa aqui" class="task-input"></div>
-            <div class="item"><input type="checkbox"><input type="text" placeholder="Escreva sua tarefa aqui" class="task-input"></div>
-            <div class="item"><input type="checkbox"><input type="text" placeholder="Escreva sua tarefa aqui" class="task-input"></div>
-            <div class="item"><input type="checkbox"><input type="text" placeholder="Escreva sua tarefa aqui" class="task-input"></div>
-            <div class="item"><input type="checkbox"><input type="text" placeholder="Escreva sua tarefa aqui" class="task-input"></div>
-            <div class="item"><input type="checkbox"><input type="text" placeholder="Escreva sua tarefa aqui" class="task-input"></div>
-            <div class="item"><input type="checkbox"><input type="text" placeholder="Escreva sua tarefa aqui" class="task-input"></div>
-            <div class="item"><input type="checkbox"><input type="text" placeholder="Escreva sua tarefa aqui" class="task-input"></div>
-            <div class="item"><input type="checkbox"><input type="text" placeholder="Escreva sua tarefa aqui" class="task-input"></div>
-            <div class="item"><input type="checkbox"><input type="text" placeholder="Escreva sua tarefa aqui" class="task-input"></div>
+            <!-- Repetir o item conforme necessário -->
         </div>
     </div>
     <script src="script.js"></script>
 </body>
 </html>
+
+
