--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <img src=img/darkmode.png alt="Toggle theme" class="theme-icon">
                 </button>
             </div>
-            <h1>Minha Check List</h1>
+            <h1>Minha Web Check List</h1>
             <div class="icon"></div>
             <button class="save-btn" onclick="saveTasks()">Salvar Tarefas</button>
         </div>
