--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minha Check List</title>
     <link rel="stylesheet" href="style.css">
+    link
 </head>
 <body>
     <div class="container">
@@ -22,9 +23,38 @@
         </div>
         <div class="checklist">
             <!-- Itens da checklist -->
-            <div class="item"><input type="checkbox"><input type="text" placeholder="Escreva sua tarefa aqui" class="task-input"></div>
+            <div class="item">
+                <input type="checkbox">
+                <input type="text" placeholder="Escreva sua tarefa aqui" class="task-input">
+            </div>
         </div>
     </div>
+
+    <footer>
+        <div class="footer__contact">
+        </div>
+        <ul>
+            <li>
+                <a href="https://www.instagram.com/gustavo.fda/">
+                    <img src="assets/svg/instagram.svg" alt="Instagram" />
+                </a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/gustavofda/">
+                    <img src="assets/svg/linkedin.svg" alt="Linkedin" />
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/gustavofda">
+                    <img src="assets/svg/github.svg" alt="Github" />
+                </a>
+            </li>
+        </ul>
+        <p class="footer__copyright">
+            © 2024 Gustavo Araujo. Todos os direitos reservados.
+        </p>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
