feat: adicionei o botão + para add mais linhas

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minha Check List</title>
     <link rel="stylesheet" href="style.css">
-    link
 </head>
 <body>
     <div class="container">
@@ -17,7 +16,7 @@
                     <span class="slider"></span>
                 </label>
             </div>
-            <h1>Minha Web Check List</h1>
+            <h1>Minha Check List</h1>
             <div class="icon"></div>
             <button class="save-btn" onclick="saveTasks()">Salvar Tarefas</button>
         </div>
@@ -28,11 +27,11 @@
                 <input type="text" placeholder="Escreva sua tarefa aqui" class="task-input">
             </div>
         </div>
+        <button class="add-btn" onclick="addTask()">+</button>
     </div>
 
     <footer>
-        <div class="footer__contact">
-        </div>
+        <div class="footer__contact"></div>
         <ul>
             <li>
                 <a href="https://www.instagram.com/gustavo.fda/">
@@ -58,5 +57,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
