fix: corrige erros do botão do modo escuro

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button class="remove-btn" onclick="removeTask(this)">Remover</button>
             </div>
         </div>
-        <button class="add-btn" onclick="addTask()">+</button>
+        <button class="add-btn" id="add-btn">+</button>
     </div>
 
     <footer>
