fix: nova imagem SVG adiciona ao lado do H1

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                     <span class="slider"></span>
                 </label>
             </div>
+            <img src="assets/svg/img-h1.svg" alt="Ícone" class="icon-svg"> <!-- Imagem adicionada -->
             <h1>Minha Check List</h1>
-            <div class="icon"></div>
             <button class="save-btn" onclick="saveTasks()">Salvar Tarefas</button>
         </div>
         <div class="checklist" id="checklist">
