feat: added favicon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/buttons.css">
     <link rel="stylesheet" href="css/checklist.css">
     <link rel="stylesheet" href="css/media-queries.css">
+    <link rel="shortcut icon" href="/favicon/favicon.ico" type="image/x-icon">
     <title>Minha Check List</title>
 
 </head>
